# drawing-to-3d

./: .gitignore  README.md  datum-explainer.html  environment.yml  handoff.md  projection.py  pyproject.toml  trueform.html  views_reference.md  zhang.py
backend/agent/: __init__.py  __main__.py  agent.py  analysis.py  cadquery_reference.md  gate.py  models.py  prompts.py  retrieval.py
backend/cad/: __init__.py  __main__.py  _harness.py  render.py
backend/llm/: __init__.py  __main__.py  gemini.py
docs/: AGENTS.md  ARCHITECTURE.md  SECURITY.md  demo-script.md  views-reference.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/lovable_project/scripts/: bake_gate.py
frontend/lovable_project/src/: routeTree.gen.ts
frontend/lovable_project/src/assets/: cd.jpg.asset.json  dchen.jpg.asset.json  final.step.asset.json  hero-drawing.png.asset.json  hero-solid.png.asset.json  pn.jpg.asset.json
frontend/lovable_project/src/demo/: runner.ts  runs.ts
frontend/public/: cad-editor.html  viewer3d.html
frontend/scripts/: bake_gate.py  postbuild.mjs
frontend/src/: App.tsx  index.css  styles.css  types.ts
frontend/src/assets/: final.step
frontend/src/components/: Background.tsx  GlassCard.tsx  Header.tsx  PageHeader.tsx  StepViewer.tsx
frontend/src/demo/: types.ts
frontend/src/routes/: __root.tsx  demo.tsx  index.tsx  pricing.tsx
frontend/src/screens/: BuildScreen.tsx  ExportScreen.tsx  PreviewScreen.tsx  ReadScreen.tsx  UploadScreen.tsx  VerifyScreen.tsx
samples/cad/: bracket.py
(+6 files in other folders)
